{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 69,
  "lineage": "34f75c1d-3b80-718c-4509-ef99bcf417a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "keycloak",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NodePort: keycloak",
            "from_port": 30080,
            "id": "sgrule-1867644101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-04c623b66afd8af65",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NodePort: docvault-web",
            "from_port": 30006,
            "id": "sgrule-219820442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0c94713d8bc633e8a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30006,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:security-group/sg-0ceaa49f8bfeba4c8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ceaa49f8bfeba4c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f28a50475a2498fa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "docvault-eks-cluster-20260505091857505200000008",
            "name_prefix": "docvault-eks-cluster-",
            "owner_id": "900069968619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-cluster",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-cluster",
              "Project": "DocVault"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:security-group/sg-0f28a50475a2498fa",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f28a50475a2498fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ceaa49f8bfeba4c8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "docvault-eks-node-20260505091858543600000009",
            "name_prefix": "docvault-eks-node-",
            "owner_id": "900069968619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-node",
              "Project": "DocVault",
              "kubernetes.io/cluster/docvault-eks": "owned"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-node",
              "Project": "DocVault",
              "kubernetes.io/cluster/docvault-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1368945775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ceaa49f8bfeba4c8",
            "security_group_rule_id": "sgr-0a5f391c0a623befd",
            "self": false,
            "source_security_group_id": "sg-0f28a50475a2498fa",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1416336537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-02b75ca61d9298df8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2038850536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0b88dca139724a8e4",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1097613355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0d09f908ef6b85735",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2010241091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-02d05e4d032b492b7",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1687020642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0c13241f4ad405c96",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2938793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0d0a0359cb9a91208",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-528975601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-03a5fe81bd8021b59",
            "self": false,
            "source_security_group_id": "sg-0ceaa49f8bfeba4c8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-874045787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0aaebbf78ac4c4f05",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-805205513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-0ae4fd47b13b0fc19",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1952328216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f28a50475a2498fa",
            "security_group_rule_id": "sgr-03a2d1d0484cc8e27",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:network-acl/acl-04b5acf27373519e1",
            "default_network_acl_id": "acl-04b5acf27373519e1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04b5acf27373519e1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "900069968619",
            "subnet_ids": [
              "subnet-0392eb8b2d5367a22",
              "subnet-063fe74f4bf6caa12",
              "subnet-0a8ba93f7fad4a0ae",
              "subnet-0ebdc4d7c6d98d0a5"
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:route-table/rtb-0996e539e6a81810c",
            "default_route_table_id": "rtb-0996e539e6a81810c",
            "id": "rtb-0996e539e6a81810c",
            "owner_id": "900069968619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:security-group/sg-037f5055d329e2a32",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-037f5055d329e2a32",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "900069968619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-default",
              "Project": "DocVault"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:internet-gateway/igw-02cddc956845cd7b7",
            "id": "igw-02cddc956845cd7b7",
            "owner_id": "900069968619",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc",
              "Project": "DocVault"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02cddc956845cd7b7",
            "id": "r-rtb-0ed9a9275abec87b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed9a9275abec87b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:route-table/rtb-03c065aa71657c120",
            "id": "rtb-03c065aa71657c120",
            "owner_id": "900069968619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private",
              "Project": "DocVault"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:route-table/rtb-0ed9a9275abec87b2",
            "id": "rtb-0ed9a9275abec87b2",
            "owner_id": "900069968619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cddc956845cd7b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public",
              "Project": "DocVault"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa405286ff07986c",
            "route_table_id": "rtb-03c065aa71657c120",
            "subnet_id": "subnet-063fe74f4bf6caa12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8fb8ef1837f8e92",
            "route_table_id": "rtb-03c065aa71657c120",
            "subnet_id": "subnet-0392eb8b2d5367a22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef81c06a0e9abae",
            "route_table_id": "rtb-0ed9a9275abec87b2",
            "subnet_id": "subnet-0a8ba93f7fad4a0ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051722ceb6f493cc7",
            "route_table_id": "rtb-0ed9a9275abec87b2",
            "subnet_id": "subnet-0ebdc4d7c6d98d0a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:subnet/subnet-063fe74f4bf6caa12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063fe74f4bf6caa12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900069968619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private-ap-southeast-1a",
              "Project": "DocVault",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private-ap-southeast-1a",
              "Project": "DocVault",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:subnet/subnet-0392eb8b2d5367a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392eb8b2d5367a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900069968619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private-ap-southeast-1b",
              "Project": "DocVault",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-private-ap-southeast-1b",
              "Project": "DocVault",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:subnet/subnet-0a8ba93f7fad4a0ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8ba93f7fad4a0ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900069968619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public-ap-southeast-1a",
              "Project": "DocVault",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public-ap-southeast-1a",
              "Project": "DocVault",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:subnet/subnet-0ebdc4d7c6d98d0a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebdc4d7c6d98d0a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900069968619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public-ap-southeast-1b",
              "Project": "DocVault",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc-public-ap-southeast-1b",
              "Project": "DocVault",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d9d6fd9ab1e827f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:vpc/vpc-07d9d6fd9ab1e827f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-04b5acf27373519e1",
            "default_route_table_id": "rtb-0996e539e6a81810c",
            "default_security_group_id": "sg-037f5055d329e2a32",
            "dhcp_options_id": "dopt-01dc513931559fae9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d9d6fd9ab1e827f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0996e539e6a81810c",
            "owner_id": "900069968619",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc",
              "Project": "DocVault"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-eks-vpc",
              "Project": "DocVault"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}